--- a/sati_django/src/templates/javascript.html
+++ b/sati_django/src/templates/javascript.html
@@ -30,6 +30,26 @@
 
 <!-- Public -->
 
+<!-- App: Public -->
+
+<script src="{% static "/js/public/event/event_controller.js" %}"></script>
+<script src="{% static "/js/public/event/event_directive.js" %}"></script>
+<script src="{% static "/js/public/event/event_factory.js" %}"></script>
+<script src="{% static "/js/public/event/event_filter.js" %}"></script>
+
+
+
+<script src="{% static "/js/public/signup/signup_controller.js" %}"></script>
+<script src="{% static "/js/public/signup/signup_factory.js" %}"></script>
+<script src="{% static "/js/public/signup/signup_directive.js" %}"></script>
+
+
+<script src="{% static "/js/public/public_directive.js" %}"></script>
+
+<!-- DASH -->
+<script src="{% static "/js/dashboard/participant/participant_controller.js" %}"></script>
+
+
 <!-- MDL -->
 
 <script src="{% static "/node_modules/mdl/material.min.js" %}"></script>
