--- a/sati_django/apps/dashboard/templates/dashboard/base.html
+++ b/sati_django/apps/dashboard/templates/dashboard/base.html
@@ -39,7 +39,7 @@
 
     </head>
 
-    <body>
+    <body ng-app="sati" ng-cloak>
 
         <!-- The drawer is always open in large screens. The header is always shown, even in small screens. -->
         <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
@@ -52,29 +52,6 @@
                     <span class="mdl-layout-title">{% block title %}{% endblock %}</span>
                     <div class="mdl-layout-spacer"></div>
 
-                    <!-- Search Menu
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right">
-
-
-                        <label class="mdl-button mdl-js-button mdl-button--icon" for="fixed-header-drawer-exp">
-                            <i class="material-icons">search</i>
-                        </label>
-                        <div class="mdl-textfield__expandable-holder">
-                            <input class="mdl-textfield__input" type="text" name="search" id="fixed-header-drawer-exp">
-                            <label class="mdl-textfield__label" for="search">Informe sua pesquisa</label>
-                        </div>
-
-                    </div>
-                    -->
-
-{#                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">#}
-{#                        <i class="material-icons">more_vert</i>#}
-{#                    </button>#}
-{#                    <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">#}
-{#                        <li class="mdl-menu__item">About</li>#}
-{#                        <li class="mdl-menu__item">Contact</li>#}
-{#                        <li class="mdl-menu__item">Legal information</li>#}
-{#                    </ul>#}
 
                 </div>
 
@@ -121,14 +98,14 @@
                 </header>
 
                 <nav class="dashboard-navigation mdl-navigation mdl-color--blue-grey-800">
-
                     <a class="mdl-navigation__link" href="/dashboard/"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">dashboard</i>Home</a>
-                    {% if request.user.is_staff %}
-                    <a class="mdl-navigation__link" href="/dashboard/edition"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">bookmark</i>Edição</a>
-                    {% endif %}
-                    <a class="mdl-navigation__link" href="/dashboard/event"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Evento</a>
-                    <a class="mdl-navigation__link" href="/dashboard/get_all_participants"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Get E/P</a>
 
+                    {% if request.user.is_staff %}
+                        <a class="mdl-navigation__link" href="/dashboard/edition"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">bookmark</i>Edição</a>
+                        <a class="mdl-navigation__link" href="/dashboard/event"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Evento</a>
+                        <a class="mdl-navigation__link" href="/dashboard/participant"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">face</i>Participantes</a>
+                        <a class="mdl-navigation__link" href="/dashboard/get_all_participants"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Get E/P</a>
+                    {% endif %}
                     <a class="mdl-navigation__link" href="/dashboard/logout"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">exit_to_app</i>Logout</a>
                     <div class="mdl-layout-spacer"></div>
                     <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
