Removed unwanted div

--- a/sati_django/apps/public/templates/public/index.html
+++ b/sati_django/apps/public/templates/public/index.html
@@ -25,20 +25,20 @@
     <event-list class="content-grid mdl-grid max-w-1440"></event-list>
 
 
-    <div class="android-be-together-section mdl-typography--text-center">
-
-        <div class="logo-font android-slogan">be together. not the same.</div>
-        <div class="logo-font android-sub-slogan">welcome to android... be yourself. do your thing. see what's going on.</div>
-        <div class="logo-font android-create-character">
-            <a href=""><img src="{% static "images/android/andy.png" %}"> create your android character</a>
-        </div>
-
-        <a href="#screens">
-            <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
-                <i class="material-icons">expand_more</i>
-            </button>
-        </a>
-    </div>
+{#    <div class="android-be-together-section mdl-typography--text-center">#}
+{##}
+{#        <div class="logo-font android-slogan">be together. not the same.</div>#}
+{#        <div class="logo-font android-sub-slogan">welcome to android... be yourself. do your thing. see what's going on.</div>#}
+{#        <div class="logo-font android-create-character">#}
+{#            <a href=""><img src="{% static "images/android/andy.png" %}"> create your android character</a>#}
+{#        </div>#}
+{##}
+{#        <a href="#screens">#}
+{#            <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">#}
+{#                <i class="material-icons">expand_more</i>#}
+{#            </button>#}
+{#        </a>#}
+{#    </div>#}
 
 
 
