--- a/sati_django/src/templates/javascript.html
+++ b/sati_django/src/templates/javascript.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="{% static "node_modules/angular-resource/angular-resource.js" %}"></script>
 
 <script type="text/javascript" src="{% static "node_modules/angular-input-masks/releases/angular-input-masks-standalone.min.js" %}"></script>
+<script type="text/javascript" src="{% static "bower_components/angular-br-filters/release/angular-br-filters.min.js" %}"></script>
 
 <script src="http://ngmaterial.assets.s3.amazonaws.com/svg-assets-cache.js"></script>
 
