--- a/sati_django/apps/dashboard/templates/dashboard/base.html
+++ b/sati_django/apps/dashboard/templates/dashboard/base.html
@@ -113,9 +113,8 @@
             </div>
 
           <main class="mdl-layout__content mdl-color--grey-100">
-
-                  {% block body_content %}{% endblock %}
-              </section>
+              <a name="top"></a>
+              {% block body_content %}{% endblock %}
 
           </main>
 
