--- a/sati_django/src/static/css-main/style-base.css
+++ b/sati_django/src/static/css-main/style-base.css
@@ -90,3 +90,69 @@
   display: none !important;
 }
 
+
+.repeated-item {
+  border-bottom: 1px solid #ddd;
+  padding-bottom : 10px;
+  padding-top: 10px;
+}
+
+.checkboxdemoSyncing .checkboxDemo1 div {
+  clear: both; }
+
+.checkboxdemoSyncing legend {
+  color: #3F51B5; }
+
+.checkboxdemoSyncing legend code {
+  color: #3F51B5;
+  font-weight: normal; }
+
+.checkboxdemoSyncing p {
+  padding-left: 8px; }
+
+.checkboxdemoSyncing .info {
+  padding-left: 13px; }
+
+.checkboxdemoSyncing div.standard {
+  padding: 8px;
+  padding-left: 15px; }
+
+.checkboxdemoSyncing fieldset.standard {
+  border-style: solid;
+  border-width: 1px;
+  height: 100%; }
+
+.divider {								/* minor cosmetics */
+    display: table;
+    font-size: 24px;
+    text-align: center;
+    width: 100%; 						/* divider width */
+    margin: 20px -10px;					/* spacing above/below */
+}
+.divider span { display: table-cell; position: relative; }
+.divider span:first-child, .divider span:last-child {
+    width: 50%;
+    top: 13px;							/* adjust vertical align */
+    -moz-background-size: 100% 2px; 	/* line width */
+    background-size: 100% 2px; 			/* line width */
+    background-position: 0 0, 0 100%;
+    background-repeat: no-repeat;
+}
+.divider span:first-child {				/* color changes in here */
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#7c7c7c));
+    background-image: -webkit-linear-gradient(180deg, transparent, #7c7c7c);
+    background-image: -moz-linear-gradient(180deg, transparent, #7c7c7c);
+    background-image: -o-linear-gradient(180deg, transparent, #7c7c7c);
+    background-image: linear-gradient(90deg, transparent, #7c7c7c);
+}
+.divider span:nth-child(2) {
+    color: #7c7c7c; padding: 0px 5px; width: auto; white-space: nowrap;
+}
+.divider span:last-child {				/* color changes in here */
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7c7c7c), to(transparent));
+    background-image: -webkit-linear-gradient(180deg, #7c7c7c, transparent);
+    background-image: -moz-linear-gradient(180deg, #7c7c7c, transparent);
+    background-image: -o-linear-gradient(180deg, #7c7c7c, transparent);
+    background-image: linear-gradient(90deg, #7c7c7c, transparent);
+}
+
